--- a/findly-builder/src/app/components/search-experience/search-experience.component.html
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.html
@@ -433,20 +433,20 @@
                                 <input id="checkbox_grpb" class="checkbox-custom" type="checkbox" [checked]="searchObject.searchInteractionsConfig.feedbackExperience.resultLevel" [(ngModel)]="searchObject.searchInteractionsConfig.feedbackExperience.resultLevel">
                                 <label for="checkbox_grpb" class="checkbox-custom-label">Result Level</label>
                             </div>
-                            <div class="kr-sg-checkbox">
+                            <!-- <div class="kr-sg-checkbox">
                                 <input id="checkbox_grpc" class="checkbox-custom" type="checkbox" disabled>
                                 <label for="checkbox_grpc" class="checkbox-custom-label">Query Level</label>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
-                    <div class="right-sec col-5">
+                    <!-- <div class="right-sec col-5">
                         <div class="preview-interactions">
                             <div class="label_text">Preview</div>
                             <div class="bg-preview-content">
 
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>             
             </div>
           </div>
@@ -490,7 +490,7 @@
     </div>
   </perfect-scrollbar>
   <div class="modal-footer">
-    <button type="button" class="kr-sg-button-primary btn_lg" data-dismiss="modal">Next</button>
+    <!-- <button type="button" class="kr-sg-button-primary btn_lg" data-dismiss="modal">Next</button> -->
     <button type="button" class="kr-sg-button-secondary btn_lg" data-dismiss="modal" (click)="closePreviewPopup()">Close</button>
   </div>
 </kr-modal> 
