--- a/findly-builder/src/app/components/app-header/app-header.component.html
+++ b/findly-builder/src/app/components/app-header/app-header.component.html
@@ -214,12 +214,12 @@
         </div>
         <div class="modal-body textAlignLeft">
           <div class="kr-sg-input-text mb-3">
-            <div class="label-text">Name</div>
-            <input maxlength="128" type="text" autocomplete="off" placeholder="App name" class="input-text" [(ngModel)]="newApp.name" name="appName">
+            <div class="label-text">Name Your App</div>
+            <input maxlength="128" type="text" autocomplete="off" placeholder="Test name" class="input-text" [(ngModel)]="newApp.name" name="appName">
           </div>
           <div class="kr-sg-input-text-area mb-2">
             <div class="label-text">Description</div>
-            <textarea maxlength="512" placeholder="App description " autocomplete="off" class="input-text" [(ngModel)]="newApp.description" name="appDesc"></textarea>
+            <textarea maxlength="512" placeholder="Enter App Description " autocomplete="off" class="input-text" [(ngModel)]="newApp.description" name="appDesc"></textarea>
           </div>
           <div class="kr-sg-dropdowns w-100 mt-1">
             <div class="label-text">Language</div>
@@ -238,7 +238,7 @@
         </div>
         <div class="modal-footer" [ngClass]="{'disabled': creatingInProgress}">
            <button type="button" class="btn kr-btn-cancel" data-dismiss="modal" (click)="closeCreateApp()">Close</button>
-           <button [disabled]="!newApp.name"  type="button" class="kr-sg-button-primary btn_lg"  data-dismiss="modal" (click)='createFindlyApp()'>{{creatingInProgress?'Creating...':'Proceed'}}</button>
+           <button [disabled]="!newApp.name"  type="button" class="kr-sg-button-primary btn_lg"  data-dismiss="modal" (click)='createFindlyApp()'>{{creatingInProgress?'Creating...':'Create'}}</button>
        
           </div>
   
