--- a/findly-builder/src/app/components/apps-home/apps-home.html
+++ b/findly-builder/src/app/components/apps-home/apps-home.html
@@ -88,7 +88,7 @@
                 <img src="assets/icons/user-gray.svg">
               </div>
               <div class="content-sec">
-                <div class="name"><span>{{app.name}}</span></div>
+                <div class="name"><span>{{app.name | titlecase}}</span></div>
                 <div class="info-text" *ngIf="app.description !==''">{{app.description}}</div>
               </div>
             </div>
@@ -97,7 +97,7 @@
           <div class="cards-content" (click)="openApp(app)" *ngFor="let app of recentApps | filter: [ searchApp, 'name']">
             <div class="box">                
               <div class="content-sec">
-                <div class="name"><span>{{app.name}}</span></div>
+                <div class="name"><span>{{app.name| titlecase}}</span></div>
                 <div class="info-text" *ngIf="app.description !==''">{{app.description}}</div>
               </div>
               <div class="user-name" *ngIf="app.createdBy!==userId">{{app.userDetails.fullName}}</div>
@@ -136,7 +136,7 @@
           <div class="cards-content" *ngFor="let filter of filteredApps | filter: [ searchApp, 'name']" (click)="openApp(filter)">
             <div class="box">                
               <div class="content-sec">
-                <div class="name"><span>{{filter.name}}</span></div>
+                <div class="name"><span>{{filter.name| titlecase}}</span></div>
                 <div class="info-text" *ngIf="filter.description !==''">{{filter.description}}</div>
               </div>
               <div class="user-name" *ngIf="filter.createdBy!==userId">{{filter.userDetails.fullName}}</div>
