--- a/findly-builder/src/app/components/search-interface/search-interface.component.html
+++ b/findly-builder/src/app/components/search-interface/search-interface.component.html
@@ -35,7 +35,7 @@
           </div>
         </div>  
 
-          <div class="radio-section" *ngIf="selectedSetting != 'search'">
+          <div class="radio-section d-none" *ngIf="selectedSetting != 'search'">
             <div class="radio-block">
               <div class="main-title">No. of Results to be Displayed</div>
               <div class="kr-sg-radiobutton d-block">
