--- a/findly-builder/src/app/components/insights/insights.component.html
+++ b/findly-builder/src/app/components/insights/insights.component.html
@@ -239,7 +239,7 @@
                 <img src="assets/icons/analytics/clicks.svg">{{analystic.clicks || 0}}
             </div>
         </div>
-        <div class="count-sec m-0">
+        <div class="count-sec m-0 d-none">
             <div class="title">Feedback</div>
             <div class="count">
                 <span class="feedback-thumb">
