--- a/findly-builder/src/app/components/dashboard/dashboard.component.html
+++ b/findly-builder/src/app/components/dashboard/dashboard.component.html
@@ -337,10 +337,16 @@
                         <div class="text-center">{{'metrics.dash_board_view.Number_of_Clicks'| translate}}</div>
                     </div>
                 </div>
-                <!-- <div class="col-6 box-content">
+                <div class="col-6 box-content">
                     <div class="full-card pb-4">
                         <div class="title-card">{{'metrics.dash_board_view.Feedback'| translate}}</div>
-                        <div class="row col-12 m-0 p-0">
+                        <div class="empty-feedback">
+                            <div class="position-relative">
+                                <img src="assets/icons/overview/comming-soon.svg">
+                                <div class="title-empty">Coming Soon</div>
+                            </div>
+                        </div>
+                        <!-- <div class="row col-12 m-0 p-0">
                             <div class="col-6 m-0 p-0 legends_sec_piechart">
                                 <div echarts [options]="feedbackPieSearches" class="pie-chart-graph"></div>
                                 <div class="legend-data col-12 p-0">
@@ -365,9 +371,9 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
-                </div> -->
+                </div>
             </div>
         </div>
         <!-- <div *ngIf="slider === 2">
