--- a/findly-builder/src/app/components/summary/summary.component.scss
+++ b/findly-builder/src/app/components/summary/summary.component.scss
@@ -245,7 +245,7 @@
                 box-shadow: 0px -4px 80px rgba(0, 0, 0, 0.07), 0px -1.48494px 6.91958px rgba(0, 0, 0, 0.0186561);
                 border-radius: 6px;
                 padding: 15px;
-                // height: 100%;
+                height: 100%;
                 &.config_channels{
                     padding: 15px 4px;  
                     .title-sec{
