fly-2048 Bot Link: 'No linked tasks found' text msg flashes on navigating from one page to other code changes

--- a/findly-builder/src/app/components/bot-action/bot-action.component.html
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.html
@@ -130,7 +130,7 @@
                   </div>
                 </perfect-scrollbar>
               </ng-container>
-              <ng-container *ngIf="!(linkedBotTasks && linkedBotTasks.length)">
+              <ng-container *ngIf="!(linkedBotTasks && linkedBotTasks.length) && !loading">
                 <div class="linked-bot-tasks-empty-content">
                   <img class="empty-content-indicator-image" src="assets/images/icons/empty_ill.svg" />
                   <div class="empty-content-container-content">
