--- a/findly-builder/src/app/components/result-ranking/result-ranking.component.scss
+++ b/findly-builder/src/app/components/result-ranking/result-ranking.component.scss
@@ -1171,7 +1171,7 @@
                         position: absolute;
                         right: 0;                        
                         height: 100%;
-                        top: 0;
+                        top: -8px;
                         width: 181px;                   
                         visibility: visible;
                         text-align: right;
