fly-1473 Business Rules: In Add Rule page, "select parameters" is displayed instead of "Set parameters" code changes

--- a/findly-builder/src/app/components/business-rules/business-rules.component.html
+++ b/findly-builder/src/app/components/business-rules/business-rules.component.html
@@ -209,7 +209,7 @@
                                     </div>
                                 </div>
                                 <div class="row m-0 search-content-sec">
-                                    <div class="col-2 p-0 title">Select Parameters</div>
+                                    <div class="col-2 p-0 title">Set Parameters</div>
                                     <div class="col-4 pr-0">
                                         <div class="kr-sg-dropdowns w-auto" ngbDropdown (click)="currentEditInex = index" *ngIf="ruleObj.contextType !=='userContext'">
                                             <div class="dropdown dropdown-open">
