--- a/findly-builder/src/app/components/add-faq/add-faq.component.html
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.html
@@ -181,7 +181,7 @@
                             </div>
                             <div class="row m-0 search-content-sec">
                                 <div class="col-2 p-0 title">
-                                  Select Parameters
+                                  Set Parameters
                                 </div>
                                 <div class="col-4 pr-0">
                                   <div class="kr-sg-dropdowns w-auto" ngbDropdown (click)="currentEditInex = index" *ngIf="ruleObj.contextType !=='userContext'">
